<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/desert"
    tools:context=".activity_menu">

    <LinearLayout
        android:id="@+id/linearLayoutMenu1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <Button
            android:id="@+id/playButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/play"
            android:layout_marginTop="30dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:background="@drawable/button"
            android:onClick="goToSelectMode"/>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/settingsButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif"
                android:text="@string/settings"
                android:background="@drawable/button2"
                android:onClick="settingsOnClick"/>

            <Button
                android:id="@+id/profileButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif"
                android:background="@drawable/button2"
                android:text="@string/profile"
                android:onClick="profileOnClick"/>
        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>