<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/desert"
    tools:context=".activity_settings">

    <LinearLayout
        android:id="@+id/linearLayoutSettings1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="15dp"

        android:layout_marginEnd="15dp"
        android:layout_marginBottom="8dp"
        android:gravity="center|top|left"
        android:orientation="vertical"
        android:background="@drawable/button3"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/soundSwitch"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/sSound"
            android:textSize="25sp"
            android:textStyle="bold"
            android:typeface="serif" />


        <Switch
            android:id="@+id/musicSwitch"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/sMusic"
            android:textSize="25sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <Switch
            android:id="@+id/vibrationSwitch"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/vibration"
            android:textSize="25sp"
            android:textStyle="bold"
            android:typeface="serif" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:background="@drawable/button3"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButtonPolish"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/poland" />

        <ImageButton
            android:id="@+id/imageButtonEnglish"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/england" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>